fix overflow bug of icons

--- a/TodoVueJs/src/modules/Alert/abol-alert-style.scss
+++ b/TodoVueJs/src/modules/Alert/abol-alert-style.scss
@@ -24,11 +24,16 @@
         z-index: 3;
 
         .title {
+            fill:currentColor;
+            height: 50px;
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
             align-items: center;
             font-size: 2em;
+            * {
+                height:100%;
+            }
         }
 
         .description {
